Added HW4 Part 2
Added HW4 Part 2: Populate Your Styled CSS page with your own content.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>My First Bitstarter</title>
+		<title>Hyperion - smart home security system</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css" />
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" />
@@ -155,7 +155,7 @@
 			<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 			<div class="row-fluid heading">
 				<div class="span12">
-					<h1>Product</h1>
+					<h1>Hyperion</h1>
 				</div>
 			</div> 
 
@@ -164,13 +164,13 @@
 
 					<!-- Special typography from Bootstrap for lead paragraph. -->
 					<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-					<p class="lead">One sentence description.</p>
+					<p class="lead">Smart home security system</p>
 				</div>
 			</div>
 
 			<div class="row-fluid pitch">
 				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://i.imgur.com/z51xCg9.png">
 				</div>
 
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -180,19 +180,19 @@
 							<div class="span4">
 								<!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 								<div class="linediv-l">
-									<h3>1000</h3> <p>backers</p>
+									<h3>10</h3> <p>backers</p>
 								</div>
 							</div>
 
 							<div class="span4">
 								<div class="linediv-c">
-									<h3>$6000</h3> <p>of $10,000</p>
+									<h3>$100</h3> <p>of $1000</p>
 								</div>
 							</div>
 
 							<div class="span4">
 								<div class="linediv-r">
-									<h3>10</h3> <p>days left</p>
+									<h3>100</h3> <p>days left</p>
 								</div>
 							</div>
 						</div>
@@ -203,8 +203,8 @@
 						<!-- Bootstrap progress bar -->
 						<!-- http://twitter.github.io/bootstrap/components.html#progress -->
 						<div class="thermometer progress active">
-							<div class="bar bar-success" style="width: 60%;"></div>
-							<div class="bar bar-warning" style="width: 40%;"></div>
+							<div class="bar bar-success" style="width: 10%;"></div>
+							<div class="bar bar-warning" style="width: 90%;"></div>
 						</div>
 					</div>
 
@@ -229,22 +229,15 @@
 			<!-- http://placehold.it -->
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://i.imgur.com/qQ1MDTa.jpg?1">
 				</div>
 
 				<div class="span5 copy">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justo velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						volutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
+						Hyperion - smart home security system based on the Raspberry PI and Z-wave techonology is a credit-card sized central controller which can detect any kind of unauthorized intrusion, fire, gas leaks and notify the user through email or via mobile phone.
+					</p>
+					<p>
+						With Hyperion, the consumer can select and watch cameras live from an Internet source to their home or business. Security cameras can be controlled, allowing the user to observe activity around a house or business right from a tablet or mobile phone.
 					</p>
 				</div>
 			</div>
@@ -252,22 +245,15 @@
 			<div class="row-fluid section2">
 				<div class="span5 offset1 copy copy-right">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justo velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						volutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
+						Hyperion security system include wireless motion sensors that will detect any kind of unauthorized movement, magnetic contact sensors for doors/windows that will detect any kind of unauthorized intrusion, sensors that will detect fire and gass leaks.
+					</p>
+					<p>
+						Sensors are based on Z-Wave techonlogy. Z-Wave is a wireless communications protocol designed for home automation.
 					</p>
 				</div>
 
 				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://i.imgur.com/24XvT0X.jpg">
 				</div>
 			</div>
 
@@ -281,13 +267,13 @@
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-									What does FAQ stand for?
+									What is Z-Wave?
 								</a>
 							</div>
 
 							<div id="collapseOne" class="accordion-body collapse">
 								<div class="accordion-inner">
-									Frequently Asked Question.
+									Z-Wave is a wireless communications protocol designed for home automation, specifically to remotely control applications in residential and light commercial environments. The technology uses a low-power RF radio embedded or retrofitted into home electronics devices and systems, such as lighting, home access control, entertainment systems and household appliances.
 								</div>
 							</div>
 						</div>
@@ -295,13 +281,13 @@
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-									What's a Frequently Asked Question?
+									What is Raspberry Pi?
 								</a>
 							</div>
 							<div id="collapseTwo" class="accordion-body collapse">
 
 								<div class="accordion-inner">
-									A question which is commonly asked by users.
+									The Raspberry Pi is a credit-card-sized single-board computer developed in the UK by the Raspberry Pi Foundation with the intention of promoting the teaching of basic computer science in schools.
 								</div>
 
 							</div>
