--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
 						<div class="span6 offset3 order">
 							<!-- Standard Bootstrap button. -->
 							<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-							<button class="btn btn-success btn-large">Preorder</button>
+							<a class="coinbase-button btn btn-success btn-large" data-code="4d4b84bbad4508b64b61d372ea394dad" href="https://coinbase.com/checkouts/4d4b84bbad4508b64b61d372ea394dad">Preorder With Bitcoin</a>
+							<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 						</div>
 					</div>
 
