Changed style of bitcoin button

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 						<div class="span6 offset3 order">
 							<!-- Standard Bootstrap button. -->
 							<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-							<a class="coinbase-button btn btn-success btn-large" data-code="4d4b84bbad4508b64b61d372ea394dad" href="https://coinbase.com/checkouts/4d4b84bbad4508b64b61d372ea394dad">Preorder With Bitcoin</a>
+							<a class="coinbase-button" data-code="842c25f14ac4aa1b2b87b4cdb5d41014" data-button-style="custom_large" href="https://coinbase.com/checkouts/842c25f14ac4aa1b2b87b4cdb5d41014">Preorder With Bitcoin</a>
 							<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 						</div>
 					</div>
